update metadata Added archival cover.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Wounded-Souls_65907
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 65907-h/images/cover.jpg
 creator:
   author:
     agent_name: Gibbs, Philip
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1174
     wikipedia: https://en.wikipedia.org/wiki/Philip_Gibbs
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/65907#Wounded-Souls
 gutenberg_issued: '2021-07-24'
 gutenberg_type: Text
 identifiers:
